# ersp-yankee-swap

./: pyproject.toml
src/fair/: allocation.py  envy.py  feature.py  metrics.py  optimization.py  valuation.py
tests/: test_allocation.py  test_optimization.py
