[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[pytest]
testpaths = "tests"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"

[project]
name = "fair"
version = "0.0.1"
authors = [
  { name="David Thibodeau", email="dpthibodeau@umass.edu" },
  { name="Paula Navarrete Diaz", email="pnavarretedi@umass.edu" },
  { name="George Bissias", email="gbiss@cs.umass.edu" },
]
description = "Fair Allocation Tools"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
                "black>=26.1.0",
                'contourpy==1.1.0',
                'cycler==0.11.0',
                'et-xmlfile==1.1.0',
                'fonttools==4.42.1',
                'importlib-resources==6.0.1',
                'kiwisolver==1.4.4',
                "isort>=7.0.0",
                'matplotlib==3.10.8',
                'networkx==3.6.1',
                "numpy==2.4.2",
                'openpyxl==3.1.5',
                'packaging==23.1',
                'pandas==3.0.0',
                "pdoc>=16.0.0",
                'Pillow==10.0.0',
                'pyparsing==3.0.9',
                "pytest>=9.0.2",
                'python-dateutil==2.8.2',
                'pytz==2023.3',
                "scipy>=1.16.3",
                'six==1.16.0',
                'tzdata==2023.3',
                'zipp==3.16.2',
                'statsmodels>=0.14.6',
                'scikit-learn>=1.8.0',
                'cupy-cuda12x==14.0.0',
                'nx-cugraph-cu12==26.2.0',
               ]